2005-02-15  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.1: Add cursory note about "automate".
	* monotone.texi: Synchronize with manpage.

2005-02-15  Nathaniel Smith  <njs@codesourcery.com>

	* automate.cc: Add "Error conditions" to the standard comment
	sections.
	
	* monotone.texi (Scripting): New section.
	(Automation): New section.
	
	* tests/t_automate_heads.at: Test behavior with nonexistent
	branch.

2005-02-14  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_merge_normalization_edge_case.at: New test.
	* testsuite.at: Add it.

	* diff_patch.cc (normalize_extents): Soften the warning message
	now that we have one test case.

2005-02-14  Matthew A. Nicholson  <mnicholson@digium.com>

	* std_hooks.lua: Add vimdiff merge hooks.
	
2005-02-14  Nathaniel Smith  <njs@codesourcery.com>

	* std_hooks.lua: Remove tabs.

2005-02-14  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_automate_heads.at: New test.
	* tests/t_automate_version.at: New test.
	* testsuite.at: Add then.
	
	* commands.cc (automate): Fix documentation string.
	* automate.cc: Much more structured documentation comments.

2005-02-13  Nathaniel Smith  <njs@codesourcery.com>

	* automate.{cc,hh}: New files.
	* commands.cc: New command "automate".

2005-02-13  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Creating a Database): Fix typo, clarify
	conventions for database management following question on mailing
	list.

2005-02-12  graydon hoare  <graydon@pobox.com>

	* change_set.{cc,hh}: Correct code to pass newly-added unit tests.

2005-02-10  Derek Scherger  <derek@echologic.com>

	* monotone.1: update for restrictions
	* monotone.texi: sync with manpage

2005-02-09  Derek Scherger  <derek@echologic.com>

	* cert.cc (cert_revision_testresult): allow pass/fail testresult
	values
	* commands.cc (testresult): likewise
	* commands.cc (do_diff): disallow restriction of non-working copy
	diffs
	* monotone.texi: update for restrictions
