@@ -436,3 +436,4 @@ m4_include(tests/t_load_into_existing.at)
 m4_include(tests/t_automate_version.at)
 m4_include(tests/t_automate_heads.at)
 m4_include(tests/t_merge_normalization_edge_case.at)
+m4_include(tests/t_undo_update.at)
